# mwe_scripted_scene_manager

./: .gitmodules  .requested_shaders.txt  CMakeLists.txt  README.md  conanfile.txt  mwe_shader_cache_logs.txt
assets/: alphabet.json  flame.json  scene_script.json
assets/images/: flame.json
assets/packed_textures/: packed_texture.json
src/: main.cpp
src/graphics/scripted_transform/: sbpt.ini  scripted_transform.cpp  scripted_transform.hpp
src/sound_types/: sound_types.hpp
